<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cone_detection</name>
    <version>0.1.0</version>
    <description>Cone detection with camera-lidar fusion</description>
    <maintainer email="pgracing.team@gmail.com">PGRacing Team</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>eigen</depend>
    <depend>message_filters</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>common_msgs</depend>
    <depend>common</depend>

    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
